Explicitly including bootstrap JS

--- a/templates/core.twig
+++ b/templates/core.twig
@@ -39,6 +39,7 @@
     <script type="text/javascript" src="/static/vendor/cryptojs/hmac-sha256.js"></script>
     <script type="text/javascript" src="/static/vendor/globalize/globalize.js"></script>
     <script type="text/javascript" src="/static/vendor/globalize/cultures/globalize.culture.{{ locale | replace({'_':'-'}) }}.js"></script>
+    <script type="text/javascript" src="/static/vendor/bootstrap/js/bootstrap.min.js"></script>
     {# javascript core 2.0 #}
     <script type="text/javascript" src="/static/js/dw-2.0.js"></script>
     <script type="text/javascript" src="/static/js/dw-backend.js"></script>
